# HS_Semester_II

./: .gitignore  CMakeLists.txt
_AUD/: CMakeLists.txt  main.cpp
_AUD/E_I/: Collatz.cpp  Collatz.h
_AUD/E_II/: E_II.cpp  E_II.h  TowersOfHanoi.cpp  TowersOfHanoi.h
_AUD/E_III/: E_III.cpp  E_III.h
_AUD/E_IV/: E_IV.cpp  E_IV.h  Vector.cpp  Vector.h
_AUD/E_IX/: E_IX.txt
_AUD/E_V/: E_V.cpp  E_V.h
_AUD/E_VI/: Calculator.cpp  Calculator.h  Stack.cpp  Stack.h
_AUD/E_VII/: E_VII.txt  Tabel.cpp  Tabel.h
_AUD/E_VIII/: Sort.h
_AUD/sort/: Sort.cpp  Sort.h
_PRO2/: CMakeLists.txt  _MAIN.h  main.cpp
_PRO2/E_VI/: E_VI.cpp  E_VI.h
_PRO2/E_VI/task_III/: AddressBook.cpp  AddressBook.h  Mail.cpp  Mail.h  Mailbox.cpp  Mailbox.h  Person.cpp  Person.h
_THI/: CMakeLists.txt  _MAIN.h  main.cpp
_THI/E_IIX/: E_IIX.txt
_THI/E_IX/: E_IX.txt
_THI/E_VI/: E_VI.cpp  E_VI.h
_THI/E_VII/: CodingHelper.cpp  CodingHelper.h  TSPInstance.cpp  TSPInstance.h  TSPSolutionCandidate.cpp  TSPSolutionCandidate.h  TSPSolver.cpp  TSPSolver.h
_THI/E_VIII/: E_VIII.txt
_THI/E_X/: E_X.txt
_THI/Splitter/: CMakeLists.txt  main.cpp
_THI/Splitter/Splitter/: counting.mjava  sos.mjava
_THI/Turingmaschine/TM/: parity.tm
