cmake_minimum_required(VERSION 3.25)
project(programming_II)

set(CMAKE_CXX_STANDARD 17)

add_executable(programming_II main.cpp E_VI/E_VI.cpp E_VI/E_VI.h _MAIN.h E_VI/task_III/Person.cpp E_VI/task_III/Person.h E_VI/task_III/AddressBook.cpp E_VI/task_III/AddressBook.h E_VI/task_III/Mail.cpp E_VI/task_III/Mail.h E_VI/task_III/Mailbox.cpp E_VI/task_III/Mailbox.h)
